--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +11,251 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+/*  background-image: url("./Images/bg.jpg");
+  background-size: cover; */
+  background: #f5f5f5; 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button{
+  padding: 10px 20px;
+  background: #111;
+  color: #fff;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 15px;
+}
+
+.navbar{
+  position: sticky;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #111;
+ /* border-bottom: 1px solid #d5d5d5; */
+}
+
+.navbar .logo{
+  color: #111;
+}
+
+.hero{
+  background-image: url("./Images/bg1.jpg");
+  background-size: cover; 
+  margin: 0;
+  margin-top: -50px;
+  position: fixed;
+  z-index: -1;
+  width: 100%; 
+  height: 100vh;
+  opacity: 0.5;
+}
+
+.quiz-container {
+  position: relative;
+  height: 100%;
+  width: 100%;
+ /* margin: 50px auto 20px;
+  width:  95%;
+  max-width: 650px;
+  max-height: 350px;
+  background: rgb(240 240 240 / 18%); 
+  border: 1px solid #eee; 
+ background-image: url("./Images/bg.jpg");
+ background-size: cover; */
+  box-shadow: 0px 2px 5px 2px rgba(0,0,0,0);
+}
+
+.background-video{
+margin: 0;
+position: fixed;
+z-index: -1;
+width: 100% !important;
+height: auto !important;
+opacity: 0.5;
+}
+
+
+
+.join-screen{
+  width: 100%;
+  height: 380px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 60px;
+  text-align: center;
+  padding: 20px;
+}
+
+.join-screen h2{
+  padding-top: 50px;
+  font-size: 25px;
+  color: #000;
+}
+.join-screen p{
+  max-width: 650px;
+  color: #111;
+  font-family: Lucida Handwriting;
+}
+
+.quiz-screen {
+  position: relative;
+  margin: 50px auto 20px; 
+  width:  95%;
+  max-width: 650px;
+  max-height: 500px;
+  background: rgb(240 240 240 / 85%); 
+  border: 1px solid #eee; 
+  box-shadow: 0px 2px 5px 2px rgba(0,0,0,0);
+}
+
+
+.quiz-screen .question .progress-bar{
+  width: 0%;
+  height: 5px;
+}
+.quiz-screen .question .progress-bar.active{
+  animation: progress 30s linear;
+}
+.quiz-screen .question .question-count{
+  margin: 20px 0px;
+  text-align: center;
+  font-size: 15px;
+  color: #555;
+}
+.quiz-screen .question .main{
+  padding: 20px 40px;
+}
+.quiz-screen .question .main .title span{
+font-size: 15px;
+color: #555;
+font-weight: 600;
+}
+.quiz-screen .question .main .title p{
+  margin-top: 5px;
+  color: #111;
+}
+.quiz-screen .question .main .options{
+  margin: 40px 0px 20px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.quiz-screen .question .main .options .option{
+  width: calc(50% - 20px);
+  border: 1px solid #bbb;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.quiz-screen .question .main .options .option.active{
+  background: #070b2cbd;
+  color:#fff;
+}
+.quiz-screen .question .control{
+  padding: 10px 20px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  border-top: 1px solod #eee;
+}
+
+.result-screen{
+  width: 100%;
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+}
+
+@keyframes progress{
+  0%{
+    width: 0%;
+    background: #555;
+  }
+  79%{
+    width: 79%;
+    background: #555;
+  }
+  80%{
+    width: 80%;
+    background: orangered;
+  }
+  100%{
+    width: 100%;
+    background: orangered;
+  }
+}
+
+
+/* button join-screen */
+
+.glow-on-hover {
+  width: 220px;
+  height: 50px;
+  border: none;
+  outline: none;
+  color: #fff;
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+}
+
+.glow-on-hover:before {
+  content: '';
+  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+  position: absolute;
+  top: -2px;
+  left:-2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity .3s ease-in-out;
+  border-radius: 10px;
+}
+
+.glow-on-hover:active {
+  color: #000
+}
+
+.glow-on-hover:active:after {
+  background: transparent;
+}
+
+.glow-on-hover:hover:before {
+  opacity: 1;
+}
+
+.glow-on-hover:after {
+  z-index: -1;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #111;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+@keyframes glowing {
+  0% { background-position: 0 0; }
+  50% { background-position: 400% 0; }
+  100% { background-position: 0 0; }
 }
